--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
-<body>
-<div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFUNsS7LPU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFUNsS7LPU&#x2F;view?utm_content=DAFUNsS7LPU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Jan-Mar Recolored</a> by S E
+<html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <title>cal</title>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.1/index.global.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.statically.io/gh/selkosaur/font/02214852eff3004d57a0b0e9498221acc2499beb/stylesheet.css">
+  <link rel="stylesheet" href="https://cdn.statically.io/gh/selkosaur/sunrisesunset/main/css/scrollbar.css">
+  <link rel="stylesheet" href="./style.css">
+ </head>
+ <body>
+  <!-- partial:index.partial.html -->
+  <div id="calendar"></div>
+  <!-- partial -->
+  <script src="./script.js"></script>
  </body>
- </html>
+</html>
